2011-07-01  Nate Chapin  <japhet@chromium.org>

        Unreviewed, remove extraneous newlines from
        expected results for fast/workers/worker-finish-crash.html.

        * fast/workers/worker-finish-crash-expected.txt:

2011-07-01  Darin Adler  <darin@apple.com>

        The commit-bot checked in files without Subversion properties, so adding them now.

        * fast/loader/create-frame-in-DOMContentLoaded-expected.txt: Added property svn:eol-style.
        * fast/loader/create-frame-in-DOMContentLoaded.html: Added properties svn:mime-type and svn:eol-style.

2011-07-01  Ryosuke Niwa  <rniwa@webkit.org>

        Skip the test added by r90275 in WebKit2 because setEditingBehavior hasn't been implemented in TestRunner.

        * platform/wk2/Skipped:

2011-07-01  Hans Wennborg  <hans@chromium.org>

        IndexedDB: make LevelDB the default back-end
        https://bugs.webkit.org/show_bug.cgi?id=63817

        Reviewed by Tony Chang.

        Disable IndexedDB quota teset since quota enforcement is not yet
        supported by the LevelDB back-end.

        * platform/chromium/test_expectations.txt:

2011-07-01  Mihai Parparita  <mihaip@chromium.org>

        Rebaseline media/media-blocked-by-beforeload.html for Chromium Leopard
        (r90261 added a Leopard expectation for the Mac port, but Chromium 
        Leopard can pass with the default baseline).

        * platform/chromium-mac-leopard/media/media-blocked-by-beforeload-expected.txt: Added.

2011-07-01  Nate Chapin  <japhet@chromium.org>

        Test for https://bugs.webkit.org/show_bug.cgi?id=63835.

        Reviewed by Dmitry Titov.

        * fast/workers/worker-finish-crash-expected.txt: Added.
        * fast/workers/worker-finish-crash.html: Added.

2011-07-01  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Darin Fisher.

        location.replace with a hash change does not update the history entry
        https://bugs.webkit.org/show_bug.cgi?id=63777
