@@ -1,0 +1,10 @@
+This tests WebKit preserves non-directional selection after unapplying replacement on Mac. To manually test on Mac,
+
+Select "world" by double-clicking the word
+Replace "world" by a character by pressing a key
+Undo
+Extend selection to the left
+" world" should be selected.
+
+hello world WebKit
+FAIL - expected " world" but got "o"
